# TA-BP-Model

./: .gitignore  EventDiagram.py  LICENSE  Pipeline.tla  SearchTA.cfg  SearchTA.tla  TestBench.cfg  TestBench.out  TestBench.tla  TestBench_TTrace_1742833217.tla  Trace.trd  Util.tla  build-graph.sh  calc-time.py  compare-traces.sh  diagram-diag-2.py  diagram-diag.py  drawio-diagram-resolution.sh  drawio-diagram.py  drawio-diagram.sh  event-resolution.sh  find-ta.sh  input-rewrite.py  pretty-graph.py  readme.md  resolution-procedure.md  run-cpp.sh  template-gen.py
animation_visualizer/: index.html  script.js
cpp_version/: CMakeLists.txt  main.cpp
cpp_version/include/: EventTable.h  PipelineState.h  Prog.h  TraceDiagonal.h  Util.h
cpp_version/src/: EventTable.cpp  PipelineState.cpp  Prog.cpp  TraceDiagonal.cpp  Util.cpp  main.cpp
cpp_version/targets/: compare_traces.cpp  event_table.cpp  exec_prog.cpp  exhaustive_search.cpp  random_search.cpp  test_resolution_process.cpp
examples/: BranchTA-lat-gap.trd  BranchTA-lat.trd  BranchTA-nested-causality-problem.trd  BranchTA-nested.trd  BranchTA-simple.trd  BranchTA.trd  BranchTA2.trd  BranchTAs-auto.trd  simpleTA.trd  squashing.trd
legacy_scripts/: calc-time.py  compare-traces-TLA.sh  run-cpp.sh  template-gen.py
tla_version/: TestBench.cfg  TestBench.tla  Util.tla
